--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ a {
     background-color: #fff;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.05);
     padding: 15px 40px; /* Adjust padding as needed */
-    position: sticky; /* Makes header stick to top on scroll */
+    position: relative; /* Makes header stick to top on scroll */
     top: 0;
     z-index: 1000;
 }
@@ -2186,7 +2186,7 @@ a {
 @media screen and (max-width: 480px) {
     /* Header & Navigation */
     .main-header {
-        padding: 10px 20px;
+        padding: 25px 20px;
     }
     
     .navbar {
@@ -2570,7 +2570,7 @@ a {
 @media screen and (min-width: 481px) and (max-width: 768px) {
     /* Header & Navigation */
     .main-header {
-        padding: 15px 30px;
+        padding: 35px 30px;
     }
     
     .navbar {
@@ -2807,7 +2807,7 @@ a {
 @media screen and (min-width: 769px) and (max-width: 1024px) {
     /* Header & Navigation */
     .main-header {
-        padding: 15px 50px;
+        padding: 35px 50px;
     }
     
     .navbar {
