--- a/style.css
+++ b/style.css
@@ -2473,13 +2473,17 @@ a {
         grid-template-columns: 1fr;
         gap: 40px;
     }
+
+    .contact-text-content{
+        font-size: 0.8em;
+    }
     
     .get-in-touch h3 {
         font-size: 2em;
     }
     
     .contact-card {
-        max-width: 100%;
+        max-width: 85%;
         margin: 30px 0;
         padding: 20px;
     }
